fix seasonal data

--- a/6501x/week3/hw3-submit.Rmd
+++ b/6501x/week3/hw3-submit.Rmd
@@ -23,15 +23,7 @@ pacman::p_load(dplyr, readr, purrr, outliers, ggplot2, lubridate,
 # temps <- read_tsv('T:\\Clients\\WIP\\EJGH\\Data Science Team\\RG\\trainings\\temps-new.txt')
 temps <- read_tsv('temps.txt')
 
-temps_sorted <- temps %>%
-	gather(year, high_temp, 2:21) %>%
-	group_by(year) %>%
-	mutate(rn = 1:n()) %>%
-	ungroup() %>%	
-	arrange(year, rn) %>%
-	select(high_temp)
-
-series <- ts(temps_sorted$high_temp, frequency = 123)
+series <- ts(temps[2:21], frequency = 123)
 
 m <- HoltWinters(x = series, seasonal = 'mult', beta = F)
 plot(m)
