--- a/6501x/week5/hw5-submit.Rmd
+++ b/6501x/week5/hw5-submit.Rmd
@@ -19,8 +19,56 @@ if (Sys.info()[[1]] == "Windows") {
 }
 
 pacman::p_load(dplyr, tidyr, magrittr, readr, purrr, stats, outliers, 
-               lubridate, ggplot2, glmnet, FrF2)
+               lubridate, ggplot2, glmnet, FrF2, tibble)
 set.seed(42)
+```
+
+# Q1
+
+## Stepwise
+```{r}
+crime <- read_tsv('uscrime.txt')
+crime <- as_tibble(scale(crime))
+
+
+
+expanding_dataset <- crime %>% select(Crime)
+
+
+crime_predictor_pool <- crime[, 1:15]
+
+while (T) {
+  tracking_table <- data.frame()
+  for (i in 1:ncol(crime_predictor_pool)) {
+    crime_model_data <- cbind(expanding_dataset, crime_predictor_pool[, i])
+  
+    model <- lm(Crime ~ ., data = crime_model_data)
+  
+    current_p <- coef(summary(model))[length(coef(summary(model)))]
+    
+    if (current_p < 0.15) {
+      tracking_table <- rbind(tracking_table, data.frame(i, current_p))
+    }
+  }
+  
+  if (nrow(tracking_table) >= 1) {
+    best_column = tracking_table$i[tracking_table$current_p == min(tracking_table$current_p)]
+    expanding_dataset <- cbind(expanding_dataset, crime_predictor_pool[, best_column])
+    crime_predictor_pool <- crime_predictor_pool[, -best_column]
+  } else break
+}
+
+almost_model <- lm(Crime ~ ., data = expanding_dataset)
+summary(almost_model)
+
+```
+After iteratively adding the most significant variable at each step (until no more with p < 0.15 were left to be added), I check the final model. All of the variables in it are significant at p < 0.05, so I don't have to remove any.
+
+## LASSO
+
+```{r}
+
+
 ```
 
 ## R Markdown
