--- a/6501x/week8/hw7.tex
+++ b/6501x/week8/hw7.tex
@@ -35,19 +35,19 @@ To determine the value of any given shutoff, I would multiply the likelihood tha
 This constraint would have several elements. Each customer i's cutoff time required has several components - drive time from headquarters ($drive\_time_i$) and back again (again $drive\_time_i$), as well as a constant time required to cut service ($cut\_time$). If we assume that the workers disconnect one customer at a time and return to headquarters between each one, then at the maximum, the time it takes to run all the individual trips cannot exceed total worker time ($W$). The If we set $c_i = 1$ for each customer shut off and $c_i = 0$ for those whose service is kept on among $N$ possible customers, this constraint would be:
 
 
-\begin{math}
+\begin{gather*}
 \sum_{i}^{N}c_i*(2*drive\_time_i + cut\_time) \leq W
-\end{math}
+\end{gather*}
 
 However, this constraint is binding only in the extremely inefficient case. Some of the drive time can be lessened by disconnecting nearby customers during the same trip. We could cluster customers into $M$ geographic regions (neighborhoods? city blocks?), each with $N_j$ residents, within which we assume the travel time is negligible. A region indicator ($r_j$) would indicate 1 if any customer in that region is flagged for cutoff, thus signifying a trip is necessary. The new constraint would thus be that drive time to each neighborhood ($drive\_time_j$), plus each customer's disconnect time within that neighborhood, plus drive time back, must not exceed worker time.
 
-\begin{math}
+\begin{gather*}
 \sum_{j}^{M} r_j * (2 * drive\_time_j + \sum_{i}^{N_j} c_i * cut\_time) \leq W \\
 r_j = \begin{dcases*}
 1 & $\sum_{i}^{N_j}c_i >= 1$ \\
 0 & otherwise
 \end{dcases*}
-\end{math} 
+\end{gather*} 
 
 \end{large}
 \end{document}
